fix #9 (loading and error messages jumps)

--- a/src/app.css
+++ b/src/app.css
@@ -141,7 +141,7 @@ a {
 }
 
 .navbar__buttons .button:hover .button__icon {
-  fill: var(--color-background-main)
+  fill: var(--color-background-main);
 }
 
 .figure {
@@ -160,7 +160,7 @@ a {
 
 @media (min-width: 768px) {
   .figure {
-    min-height: calc(100vh - 5rem);
+    min-height: calc(100vh - 4rem);
     height: auto;
 
     overflow: visible;
@@ -203,12 +203,14 @@ a {
 
 .figure__loading {
   position: absolute;
+  top: 50%;
   left: 0;
   right: 0;
   text-align: center;
 
   opacity: 0;
   transform: scale(0) translateY(calc(-100% + 5rem));
+  transform-origin: top;
 
   transition-duration: var(--transition-duration);
   transition-property: opacity, transform;
@@ -221,12 +223,15 @@ a {
 
 .figure__error {
   position: absolute;
+  top: 50%;
   left: 0;
   right: 0;
   text-align: center;
 
   opacity: 0;
   transform: scale(0) translateY(calc(-100% + 5rem));
+  transform-origin: top;
+
   transition-duration: var(--transition-duration);
   transition-property: opacity, transform;
 }
